# pcc-api

./: README.md  app.py  db.py  pyproject.toml  requirements.txt
api/: api.py  models.py
id_generator/: __init__.py
migrations/versions/: 089eb92b2b90_make_nick_not_nullable.py  2ebb38f8939c_make_club_user_two_way_relationship.py  6399928d5df7_make_club_user_two_way_relationship.py  6533928c419e_make_discord_id_pk.py  786bf0479d37_make_discord_id_not_unique.py  8dcb88a89ca4_intial_migration.py  9a8b912676b0_add_cascading_option_to_fix_the_server_.py  adffeb465640_make_club_id_pk.py  baee1b1c27f8_implement_transactions_and_add_more_.py  cbe4fd8034d0_make_discord_id_pk.py  e0600a6fd5e4_make_club_id_pk.py
