[tool.poetry]
name = "clubapitest"
version = "0.1.0"
description = ""
authors = ["sairam4123 <kannanscoffee@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
flask-restx = "^0.5.1"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
